testsuite/poke.pkl/field-init-diag-4.pk
/* { dg-do compile } */

type Foo = struct { int = 3; } /* { dg-error ".*anonymous.*" } */
